# elhaylib

./: .gitignore  CMakeLists.txt  README.md  elhaylib.c  elhaylib.h  test.sh
scripts/: test.sh
tests/: dynarr_test.c  linkedlst_test.c  stack_test.c  tree_test.c
